# augene-ng

./: .gitignore  .gitmodules  README.md  audiopluginhost-lv2.patch  build-augene-player.sh  build-lv2-plugin-host.sh  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: actions.yml
augene/: build.gradle.kts
augene-console/: build.gradle
augene-console-native/: build.gradle.kts
augene-editor/: build.gradle.kts  icon.kra
augene-editor-project/: build.gradle.kts  gradle.properties  settings.gradle.kts
augene-editor-project/android/: build.gradle.kts
augene-editor-project/common/: build.gradle.kts
augene-editor-project/desktop/: build.gradle.kts
augene-gui-project/: build.gradle.kts  gradle.properties  settings.gradle.kts
augene-gui-project/android/: build.gradle.kts
augene-gui-project/common/: build.gradle.kts
augene-gui-project/desktop/: build.gradle.kts
augene-player/: .gitignore  AugenePlayer.jucer  CMakeLists.txt  README-CMAKE.md  build-osx.sh  build.sh
augene-player/Source/: Main.cpp  MainComponent.cpp  MainComponent.h
augene-project/: build.gradle.kts  gradle.properties  settings.gradle.kts
augene-project/android/: build.gradle.kts
augene-project/augene/: build.gradle.kts
augene-project/augene-console/: build.gradle
augene-project/augene-console-native/: build.gradle.kts
augene-project/common/: build.gradle.kts
augene-project/desktop/: build.gradle.kts
augene-project/midi2tracktionedit/: build.gradle.kts
docs/: RATIONALE.md
docs/design/: EDIT_MODEL_METADATA.md
gradle/: libs.versions.toml
kotractive/: build.gradle.kts
kotractive-ksp-project/: build.gradle.kts  gradle.properties  settings.gradle.kts
kotractive-ksp-project/kotractive_ksp/: build.gradle.kts
kotractive-project/: build.gradle.kts  gradle.properties  settings.gradle.kts
kotractive-project/gradle/: libs.versions.toml
kotractive-project/kotractive/: build.gradle.kts
kotractive-project/kotractive_ksp/: build.gradle.kts
kotractive_ksp/: build.gradle.kts
midi2tracktionedit-project/: settings.gradle.kts
samples/: .gitignore  empty.filtergraph  generate-automation-helper.js  sample.augene  sample.filtergraph  sample.master.filtergraph  sample.mugene  sample.tracktionedit  sample2.mugene  sample3.filtergraph
samples/Banks/: README.md  SF2Banks.augene  SfzBanks-VPO3.augene  SfzBanks.augene  SurgeBanks.augene  juicysf-realistic-drum-ethnic.filtergraph  juicysf-realistic-drum-orchestral.filtergraph  juicysf-realistic.filtergraph  sfizz-Ixox-Flute.filtergraph  sfizz-atc-1-synth-bass-1.filtergraph  sfizz-bass-strings.filtergraph  sfizz-brass-section-acc.filtergraph  sfizz-brass-section.filtergraph  sfizz-da-real-synth-drum-kit.filtergraph  sfizz-freepats-drawbar-organ-emulation.filtergraph  sfizz-grandpiano.filtergraph  sfizz-harp1.filtergraph  sfizz-nbo-tuba-full.filtergraph  sfizz-orgue-eglise1.filtergraph  sfizz-string-sec.filtergraph  sfizz-ui-metal-gtx-ksop-kpp.filtergraph  sfizz-ui-metal-gtx-ksop.filtergraph  sfizz-ui-standard-guitar.filtergraph  (+39 more)
(+162 files in other folders)
